--- a/index.html
+++ b/index.html
@@ -7,78 +7,76 @@
     </head>
     <body>
         <div class="frame1"> <!-- Основной фрейм, где у нас все будет происходить -->
-            <!-- Контейнер, где ширина нашего контента будет иметь максимум 1180px -->
-            <div class="container">
-                <!-- При компе мы видим только картинку, надпись, телефон и город. При отображении в мобилке мы видим Философия Навыки Записаться Филиалы -->
-                <!-- Шапка -->
-                <div class="header pc-header">
-                    <div class="logo">
-                        <img src="./assets/img/logo.svg">
+            <div class="gradient">
+                <!-- Контейнер, где ширина нашего контента будет иметь максимум 1180px -->
+                <div class="container">
+                    <!-- При компе мы видим только картинку, надпись, телефон и город. При отображении в мобилке мы видим Философия Навыки Записаться Филиалы -->
+                    <!-- Шапка -->
+                    <div class="header pc-header">
+                        <div class="logo">
+                            <img src="./assets/img/logo.svg">
+                        </div>
+                        <div class="group_1">
+                        </div>
+                        <div class="group_2">
+                            <span class="tel">+7 (383) 202-17-14</span>
+                            <span class="city">Новосибирск</span>
+                        </div>
                     </div>
-                    <div class="group_1">
-                        <p class="school">Международная школа робототехники и программирования</p>
+                    <div class="header mobile">
+                        <div class="mobile-header">
+                            <p>Философия</p>
+                            <p>Навыки</p>
+                            <p>Записаться</p>
+                            <p>Филиалы</p>
+                        </div>
+                        <div class="logo">
+                            <img src="./assets/img/logo.svg">
+                        </div>
                     </div>
-                    <div class="group_2">
-                        <span class="tel">+7 (383) 202-17-14</span>
-                        <span class="city">Новосибирск</span>
-                    </div>
-                </div>
-                <div class="header mobile">
-                    <div class="mobile-header">
-                        <p>Философия</p>
-                        <p>Навыки</p>
-                        <p>Записаться</p>
-                        <p>Филиалы</p>
-                    </div>
-                    <div class="logo">
-                        <img src="./assets/img/logo.svg">
-                    </div>
-                    <div class="group_1">
-                        <p class="school">Международная школа робототехники и программирования</p>
-                    </div>
-                </div>
-                <!-- Шапка -->
-                <!-- Основной контент -->
-                <div class="content">
-                    <!-- Мобильный контент не будет показан на компьютере -->
-                    <div class="mobile mobile-content">
-                        <div class="mobile-width">
+                    <!-- Шапка -->
+                    <!-- Основной контент -->
+                    <div class="content">
+                        <!-- Мобильный контент не будет показан на компьютере -->
+                        <div class="mobile mobile-content">
+                            <div class="mobile-width">
+                                <div class="nadpis">
+                                    <p>Мастерами робототехники не рождаются – ими становятся!</p>
+                                </div>
+                                <blockquote class="brus">
+                                    <p>«Кунг-фу — это философия. Она учит бороться с трудностями, пригибаться, чтобы, распрямившись, стать сильнее, принимать то, что происходит в жизни, и извлекать опыт из ошибок»</p>
+                                    <cite>Брюс Ли</cite>
+                                </blockquote>
+                                <div class="knopka">
+                                    <button type="submit" class="master">Стать мастером</button>
+                                </div>
+                            </div>
+                            <div class="pramoug"></div>
+                        </div>
+                        <!-- Мобильный контент закончен-->
+                        <!-- Контент с компа -->
+                        <div class="pc-content">
                             <div class="nadpis">
                                 <p>Мастерами робототехники не рождаются – ими становятся!</p>
+                            </div>
+                            <div class="knopka">
+                                <button type="submit" class="master">Стать мастером</button>
+                                <div class="blur_behind"></div>
                             </div>
                             <blockquote class="brus">
                                 <p>«Кунг-фу — это философия. Она учит бороться с трудностями, пригибаться, чтобы, распрямившись, стать сильнее, принимать то, что происходит в жизни, и извлекать опыт из ошибок»</p>
                                 <cite>Брюс Ли</cite>
                             </blockquote>
-                            <div class="knopka">
-                                <button type="submit" class="master">Стать мастером</button>
-                            </div>
                         </div>
-                        <div class="pramoug"></div>
-                    </div>
-                    <!-- Мобильный контент закончен-->
-                    <!-- Контент с компа -->
-                    <div class="pc-content">
-                        <div class="nadpis">
-                            <p>Мастерами робототехники не рождаются – ими становятся!</p>
-                        </div>
-                        <div class="knopka">
-                            <button type="submit" class="master">Стать мастером</button>
-                            <div class="blur_behind"></div>
-                        </div>
-                        <blockquote class="brus">
-                            <p>«Кунг-фу — это философия. Она учит бороться с трудностями, пригибаться, чтобы, распрямившись, стать сильнее, принимать то, что происходит в жизни, и извлекать опыт из ошибок»</p>
-                            <cite>Брюс Ли</cite>
-                        </blockquote>
                     </div>
                 </div>
-            </div>
-            <div class="navigation">
-                <input type="image" name="inyan" class="philosophy" src="./assets/img/philosophy/off.svg">
-                <input type="image" name="star" class="star_1" src="./assets/img/Star/off.svg">
-                <label for="star" class="label_nav">Навыки</label>
-                <input type="image" name="sign_up" class="philosophy" src="./assets/img/Sign up/off.svg">
-                <input type="image" name="metka" class="geo" src="./assets/img/mark/off.svg">
+                <div class="navigation">
+                    <input type="image" name="inyan" class="philosophy" src="./assets/img/philosophy/off.svg">
+                    <input type="image" name="star" class="star_1" src="./assets/img/Star/off.svg">
+                    <label for="star" class="label_nav">Навыки</label>
+                    <input type="image" name="sign_up" class="philosophy" src="./assets/img/Sign up/off.svg">
+                    <input type="image" name="metka" class="geo" src="./assets/img/mark/off.svg">
+                </div>
             </div>
         </div>
     </body>
